# DataEngineering

./: analyze_logs.sh  pyproject.toml  report.txt
python_task/: de_python.py
scala/: scala_exercise_7
